Adding movies list

--- a/index.html
+++ b/index.html
@@ -34,16 +34,15 @@
         <section class="movie">
           <div class="rating">
             <img src="/assets/logo-imdb.png" alt="Icon of the IMDB" />
-            <strong>8.8</strong>
+            <strong></strong>
           </div>
 
-          <span>2021 - Kids - Movie</span>
-
-          <h1>Luca</h1>
-
-          <p>
-            Luca and Alberto dream of a life of freedom, a life of adventure — and, most of all, a life with a Vespa to ride. 
-          </p>
+          <!--DATA DE LANÇAMENTO, CATEGORIA-->
+          <span></span>
+          <!--TITULO DO FILME-->
+          <h1></h1>
+          <!--SINOPSE DO FILME-->
+          <p> </p>
 
           <button>
             <img src="/assets/icon-play.png" alt="Icon play">
@@ -55,7 +54,8 @@
           <h2>Movies</h2>
 
             <div>
-              <ul>
+              <ul id="movies__list"></ul>
+              <!--
                 <li>
                   <span>Kids</span>
                   <strong>Spirit Untamed</strong>
@@ -63,38 +63,7 @@
                   <button type="button">
                     <img src="/assets/icon-play-button.png" alt="Icon play button">
                   </button>
-                </li>
-                <li>
-                  <span>Kids</span>
-                  <strong>Spirit Untamed</strong>
-  
-                  <button type="button">
-                    <img src="/assets/icon-play-button.png" alt="Icon play button">
-                  </button>
-                </li>
-                <li>
-                  <span>Kids</span>
-                  <strong>Spirit Untamed</strong>
-  
-                  <button type="button">
-                    <img src="/assets/icon-play-button.png" alt="Icon play button">
-                  </button>
-                </li>
-                <li>
-                  <span>Kids</span>
-                  <strong>Spirit Untamed</strong>
-  
-                  <button type="button">
-                    <img src="/assets/icon-play-button.png" alt="Icon play button">
-                  </button>
-                </li>
-                <li>
-                  <span>Kids</span>
-                  <strong>Spirit Untamed</strong>
-  
-                  <button type="button">
-                    <img src="/assets/icon-play-button.png" alt="Icon play button">
-                  </button>
+                -->
                 </li>
               </ul>
             </div>
